--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,13 @@
 						value="Cancel"
 						class="button is-warning"
 					/>
+					 <input class="file-input" type="file"
+								 accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*"
+								 @change="upload_file($event, r._idx)"
+					 			 value="Upload Photo"
+								 class="button is-primary"/>
+
+
 				</div>
 			</div>
 		</div>
@@ -83,6 +90,29 @@
 							<p>{{r.message}}</p>
 					</div>
 
+
+
+					<div v-if="!r.image" class="field has-addons block">
+					<p class="control">
+					  <div class="file is-info">
+						<label class="file-label">
+						  <input class="file-input" type="file"
+								 accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*"
+								 @change="upload_file($event, r._idx)">
+						  <span class="file-cta">
+							<span class="file-label">
+							  <span>Add image</span>
+							</span>
+						  </span>
+						</label>
+					  </div>
+					</p>
+				  </div>
+
+				 <img v-if="r.image" width="400" :src="r.image"/>
+
+
+
 					<div v-if="r.email == email">
 						<div class="level-right">
 							<a class="level-item">
@@ -105,11 +135,13 @@
 [[block page_scripts]]
 <!-- Loads the index-specific js for Vue -->
 <script>
+
 	let load_contacts_url = '[[=XML(load_contacts_url)]]';
 	let add_contact_url = '[[=XML(add_contact_url)]]';
 	let delete_contact_url = '[[=XML(delete_contact_url)]]';
 	let get_rating_url = "[[=XML(get_rating_url)]]";
     let set_rating_url = "[[=XML(set_rating_url)]]";
+    let upload_image_url = "[[=XML(upload_image_url)]]";
 </script>
 <script src="js/index.js"></script>
 [[end]]
